2002-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
	Follow the change in Gnus.

	* mime-w3m.el (mime-w3m-mode-ignored-keys): New variable.
	(mime-w3m-setup): Use it.

2002-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map): Unbind the key "N" to the command
	`w3m-namazu' in order to avoid binding collision to
	`w3m-view-next-page'.  Thanks to Satoshi TAOKA for his report.
	(w3m-mode): Fix its docstring for `w3m-antenna-add-current-url'.
	Thanks to Satoshi TAOKA and Yoichi NAKAYAMA for the advice.

2002-09-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-expire-all): Don't expire
	sure if not shimbun folder.

2002-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-zdnet.el (shimbun-make-contents): Set date string.
	Remove the part which is not considered as the body.

	* shimbun/shimbun.el (shimbun-make-date-string): Accept the 5th
	optional argument, `timezone'.

2002-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Ignore byte-compile warnings for the dummy autoloads,
	mis-judging of cl run-time functions and the obsoleteness of
	`make-local-hook' under Emacs CVS.

2002-09-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (w3mhack-examine-modules): Do not compile
	`mew-shimbun.el' with old Mew.

	* mew-w3m.el (top): Avoid byte-compile error and warning for old
	Mew. Do not push 'mew-w3m-cid-retrieve' for old Mew.

2002-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-arrived-setup): Use 0 instead of nil as the initial
	value for the new obarray.

	* w3m-filter.el (w3m-filter-setup): Use 0 instead of nil as the
	initial value for the new obarray.

2002-09-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (top): Add comment for expire.
	(mew-shimbun-expires): New user variable.
	(mew-shimbun-expire-all, mew-shimbun-expire)
	(mew-shimbun-expire-day): New functions.

2002-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
